working on playmaker section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,5 @@
 <mat-toolbar color="primary">
-    <span>My Angular Website</span>
-    <span class="spacer"></span> <!-- This is for spacing -->
-    <a mat-button routerLink="/">Home</a>
-    <a mat-button routerLink="/playmaker">Playmaker</a>
-    <a mat-button routerLink="/about">About</a>
+    <button class="navButton" mat-button routerLink="/">Home</button>
+    <button class="navButton" mat-button routerLink="/playmaker">Playmaker</button>
+    <button class="navButton" mat-button routerLink="/about">About</button>
   </mat-toolbar>
