--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,10 @@
 <mat-toolbar color="primary">
-    <button class="navButton" mat-button routerLink="/">Home</button>
-    <button class="navButton" mat-button routerLink="/playmaker">Playmaker</button>
-    <button class="navButton" mat-button routerLink="/about">About</button>
+  <div class="toolbar-title">
+    <p>ValGrind</p>
+  </div>
+  <div class="nav-buttons">
+      <button class="navButton" mat-button routerLink="/">Home</button>
+      <button class="navButton" mat-button routerLink="/playmaker">Playmaker</button>
+      <button class="navButton" mat-button routerLink="/about">About</button>
+  </div>
   </mat-toolbar>
