Added login and markers

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,1 +1,3 @@
-<p>about-page works!</p>
+<div class="google-slides-container">
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSBCycXCvDZpd7-Z0ugyxZ4m9Yau1qinKhNQEkeMK6x1oPDmtCbRrX3GD9r-2ApR8LFoTl2kQ24q2jJ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div>
