--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,53 +1,33 @@
 <div class="home-container">
-    <h1 class="title">Welcome to ValGrind</h1>
+    <h1 class="title"><u>Welcome to ValGrind</u></h1>
     <div class="content">
         <div class="text-section">
-            <!-- Your text description here -->
-            <p>This is an introduction to the site and its functionality...</p>
+            <span class="big-word">PLAN.</span>
+            <span class="small-words">Plan Your Attack</span>
         </div>
         <div class="photo-section">
             <!-- Your photos here -->
-            <img src="path-to-your-photo.jpg" alt="Description of photo">
+            <img src="../../assets/Images/Plan-LoadIn-Execute/Plan.png" alt="Description of photo">
         </div>
     </div>
     <div class="content">
         <div class="text-section">
-            <!-- Your text description here -->
-            <p>This is an introduction to the site and its functionality...</p>
+            <span class="big-word">LOAD IN.</span>
+            <span class="small-words">Find Your Opponents</span>
         </div>
         <div class="photo-section">
             <!-- Your photos here -->
-            <img src="path-to-your-photo.jpg" alt="Description of photo">
+            <img src="../../assets/Images/Plan-LoadIn-Execute/LoadIn.png" alt="Description of photo">
         </div>
     </div>
     <div class="content">
         <div class="text-section">
-            <!-- Your text description here -->
-            <p>This is an introduction to the site and its functionality...</p>
+            <span class="big-word">PLAY.</span>
+            <span class="small-words">Dominate Your Games</span>
         </div>
         <div class="photo-section">
             <!-- Your photos here -->
-            <img src="path-to-your-photo.jpg" alt="Description of photo">
-        </div>
-    </div>
-    <div class="content">
-        <div class="text-section">
-            <!-- Your text description here -->
-            <p>This is an introduction to the site and its functionality...</p>
-        </div>
-        <div class="photo-section">
-            <!-- Your photos here -->
-            <img src="path-to-your-photo.jpg" alt="Description of photo">
-        </div>
-    </div>
-    <div class="content">
-        <div class="text-section">
-            <!-- Your text description here -->
-            <p>This is an introduction to the site and its functionality...</p>
-        </div>
-        <div class="photo-section">
-            <!-- Your photos here -->
-            <img src="path-to-your-photo.jpg" alt="Description of photo">
+            <img src="../../assets/Images/Plan-LoadIn-Execute/Play.png" alt="Description of photo">
         </div>
     </div>
 </div>
